Add Web and Wod Sample
Add WebRequest and WebClient Sample
Add Word read Sample
Add Map Sample

--- a/readme.htm
+++ b/readme.htm
@@ -239,6 +239,14 @@ B b = new B();
       <td> Socket 客户端处理 的例子 </td>
     </tr>
 
+	
+    <tr>
+      <td>A0145_WebRequest_WebClient </td>
+      <td> 使用 WebRequest,  WebClient  来从网页上面获取数据的例子 </td>
+    </tr>	
+	
+	
+	
     <tr>
       <td>A0150_Access </td>
       <td>访问 Access 数据库的例子 </td>
@@ -1150,6 +1158,21 @@ Code First在处理多重性关系时应用了一系列规则。
 	<tr>
       <td> B0100_NAnt </td>
       <td> Nant + Nunit + NUnit2Report  自动化  编译、单元测试、生成测试报表的例子。  </td>
+    </tr>
+
+    <tr>
+      <td>B0200_MapApi</td>
+      <td> 
+		阿里云地图Api 调用，  百度地图Api调用 
+		注：这里仅仅是 通过 地址名称， 获取经纬度。
+		目前执行的结果是： 同一个地址， 两者返回的 经纬度 差距比较大。
+		<br/>
+		也就是调用 阿里云 的接口，返回的经纬度数据， 就在阿里云的 地图上面去定位。
+		调用 百度 的接口，返回的经纬度数据， 就在百度的 地图上面去定位。
+		<br/>
+		不要用阿里云 的接口，返回的经纬度数据， 跑去百度地图上面使用。
+		或者 调用 百度 的接口，返回的经纬度数据，跑去 阿里云上面使用。
+	  </td>
     </tr>
 
     <tr>
