A0622_EF_OneToMany  升级到  .NET 4.5 。  并测试在  Oracle.ManagedDataAccess.EntityFramework  下是否正常运行。

--- a/readme.htm
+++ b/readme.htm
@@ -816,7 +816,7 @@ CodeFirst 意味着，不是先设计表、或者数据库模型。
 
     <tr>
       <td> A0622_EF_OneToMany </td>
-      <td> Entity Framework 的 One To Many 例子 (需要 .NET 4.0)
+      <td> Entity Framework 的 One To Many 例子 (需要 .NET 4.5) (已将引用更新到 EntityFramework 6.1.3 并测试 Oracle.ManagedDataAccess.EntityFramework 下是否通过)
 Code First在处理多重性关系时应用了一系列规则。
 规则使用导航属性确定多重性关系。
 即可以是一对导航属性互相指定（双向关系），也可以是单个导航属性（单向关系）。
@@ -1998,6 +1998,35 @@ Alice 通过非安全公共通道向 Bob 发送纯文本消息，并将哈希消
       <td> 设计模式 [行为模式]中，调停者/中介者 的例子</td>
     </tr>
 
+
+	<tr>
+      <td>-</td>
+      <td>-</td>
+    </tr>
+
+	
+
+	<tr>
+      <td>R0001_TestProducing</td>
+      <td>用于测试调用 RabbitMQ 的 生产者程序. Hello World 版本</td>
+    </tr>
+	<tr>
+      <td>R0002_Consuming</td>
+      <td>用于测试调用 RabbitMQ 的 消费者程序. Hello World 版本</td>
+    </tr>
+
+	<tr>
+      <td>R0003_TestProducing</td>
+      <td>用于测试调用 RabbitMQ 的 生产者程序. 持久化 / 消息响应 / 公平分发 版本.</td>
+    </tr>
+	<tr>
+      <td>R0004_Consuming</td>
+      <td>用于测试调用 RabbitMQ 的 消费者程序. 持久化 / 消息响应 / 公平分发 版本.</td>
+    </tr>
+
+
+	
+	
 	<tr>
       <td>-</td>
       <td>-</td>
