增加通过  HTML5 + js 实现客户端压缩图片， 上传到服务器的处理。

--- a/W0300_WCF_Ajax/index.htm
+++ b/W0300_WCF_Ajax/index.htm
@@ -393,6 +393,15 @@
     </td>
   </tr>
 
+
+    <tr>
+        <td>
+            <a href="Upload/UploadResizeImg.html"> 客户端 js 压缩图片, 以 Base64的 方式，上传图片的处理. </a>
+
+            <a href="Upload/UploadResizeImgMini.html"> 缩水版. </a>
+        </td>
+    </tr>
+
 </table>
 
 
