画面div排序例子

--- a/W0300_WCF_Ajax/index.htm
+++ b/W0300_WCF_Ajax/index.htm
@@ -159,6 +159,10 @@
     <td> 简单日历的例子. </td>
   </tr>
 
+  <tr>
+    <td> <a href="jq/MoveDivOrder.htm"> 简单移动Div排序的例子 </a> </td>
+    <td> 简单移动Div排序的例子. </td>
+  </tr>
 
 </table>
 
