Autocomplete 股票代码的例子.

--- a/W0300_WCF_Ajax/index.htm
+++ b/W0300_WCF_Ajax/index.htm
@@ -192,7 +192,13 @@
     <td> <a href="Autocomplete/AutocompleteTest.htm">Autocomplete/AutocompleteTest.htm</a>  </td>
     <td> 使用 typeahead.js 的处理例子.   </td>  
   </tr>
-    
+
+    <tr>
+        <td> <a href="Autocomplete/AutocompleteTestCode.htm">Autocomplete/AutocompleteTestCode.htm</a>  </td>
+        <td> 使用 typeahead.js 的处理 股票代码 例子.   </td>
+    </tr>    
+
+
 
   <tr>
     <td> <a href="Autocomplete/AutocompleteTest2.htm">Autocomplete/AutocompleteTest2.htm</a>  </td>
