--- a/readme.htm
+++ b/readme.htm
@@ -1589,8 +1589,14 @@ Alice 通过非安全公共通道向 Bob 发送纯文本消息，并将哈希消
 
 	<tr>
       <td>CR_HelloWorld</td>
-      <td> 水晶报表 Hello World 程序 </td>
+      <td> 水晶报表 Hello World 程序 ( WinForm ) </td>
     </tr>
+	
+	<tr>
+      <td>CR_HelloWorld_Web</td>
+      <td> 水晶报表 Hello World 程序 ( Web ) </td>
+    </tr>
+	
 
 	<tr>
       <td>-</td>
