--- a/W0300_WCF_Ajax/jq/MainSubTable.htm
+++ b/W0300_WCF_Ajax/jq/MainSubTable.htm
@@ -95,6 +95,12 @@
 
 
 
+		// 注意:
+		// jquery 1.9 之后， 没有 live 方法了.
+		// 使用的替代方式， 使用  on
+		// 例子操作如下:
+		// $('#parent').on('click','.son',function(){alert('test')});
+		
 
         // 注册事件.
         function RegistEvent() {
